--- a/PortfolioV2.WebApp/PortfolioV2.WebApp.csproj
+++ b/PortfolioV2.WebApp/PortfolioV2.WebApp.csproj
@@ -6,6 +6,6 @@
   </PropertyGroup>
   <ItemGroup>
     <PackageReference Include="Microsoft.EntityFrameworkCore.Design" Version="7.0.1"/>
-    <PackageReference Include="Npgsql.EntityFrameworkCore.PostgreSQL" Version="7.0.0"/>
+    <PackageReference Include="Npgsql.EntityFrameworkCore.PostgreSQL" Version="*"/>
   </ItemGroup>
 </Project>
