--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -15,6 +15,7 @@ jobs:
             - dotnet-packages-v1-{{ checksum "PortfolioV2.WebApp/PortfolioV2.WebApp.csproj" }}
       - run:
           name: "Install project dependencies"
+          command: winget install Microsoft.DotNet.SDK.7
           command: dotnet restore
       - save_cache:
           paths:
