--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -14,6 +14,9 @@ jobs:
           keys:
             - dotnet-packages-v1-{{ checksum "PortfolioV2.WebApp/PortfolioV2.WebApp.csproj" }}
       - run:
+          name: "Install SDK"
+          command: "winget install Microsoft.DotNet.SDK.7"
+      - run:
           name: "Install project dependencies"
           command: dotnet restore
       - save_cache:
