Feat: add project reference

--- a/PortfolioV2.UnitTests/PortfolioV2.UnitTests.csproj
+++ b/PortfolioV2.UnitTests/PortfolioV2.UnitTests.csproj
@@ -21,4 +21,8 @@
     </PackageReference>
   </ItemGroup>
 
+  <ItemGroup>
+    <ProjectReference Include="..\PortfolioV2.WebApp\PortfolioV2.WebApp.csproj" />
+  </ItemGroup>
+
 </Project>
