--- a/PortfolioV2.UnitTests/PortfolioV2.UnitTests.csproj
+++ b/PortfolioV2.UnitTests/PortfolioV2.UnitTests.csproj
@@ -16,6 +16,7 @@
       <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
       <PrivateAssets>all</PrivateAssets>
     </PackageReference>
+    <PackageReference Include="FluentAssertions" Version="6.0.0"/>
   </ItemGroup>
   <ItemGroup>
     <ProjectReference Include="..\PortfolioV2.WebApp\PortfolioV2.WebApp.csproj"/>
